--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -17,16 +17,16 @@
       block:
         - name: Disable default CentOS mirrors (backup original)
           ansible.builtin.lineinfile:
-            path: /etc/yum.repos.d/CentOS-*
+            path: /etc/yum.repos.d/CentOS-*.repo
             regexp: '^mirrorlist'
             replace: '#mirrorlist'
             backup: yes
 
         - name: Update CentOS mirrors to vault.centos.org (backup original)
           ansible.builtin.lineinfile:
-            path: /etc/yum.repos.d/CentOS-*
-            regexp: '^baseurl=http://mirror.centos.org'
-            replace: 'baseurl=http://vault.centos.org'
+            path: /etc/yum.repos.d/CentOS-*.repo
+            regexp: '^baseurl=http://mirror.centos.org/(.*)$'
+            replace: 'baseurl=http://vault.centos.org/\1'
             backup: yes
 
     - name: Install Fedora EPEL repo
